--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ html {
 .header {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 10px 10px 5px 5px;
     text-align: center;
     margin: 10px auto 10px;
     border-radius: 10px;
@@ -55,10 +55,10 @@ html {
 }
 .title {
     background-color: rgb(12, 32, 87);
-    width: 220px;
-    margin: 0 0 0 20px;
+    width: 210px;
+    margin: 0 0 0 5px;
     border: 3px solid white;
-    padding: 10px;
+    padding: 5px;
     border-radius: 5px;
 }
 
